--- a/index.html
+++ b/index.html
@@ -1,184 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Preefx Menu</title>
+<meta charset="UTF-8" />
+<title>Preefx Menu</title>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+:root{
+    --bg: #1c1b22;
+    --text: #ffffff;
+    --muted: #b0b0b0;
+    --grad1: #6a11cb;
+    --grad2: #2575fc;
+    --button-grad: linear-gradient(135deg, #222222, #151618);
+}
+
+html, body{
+    margin:0;
+    height:100%;
+    font-family:'Poppins',sans-serif;
+    background: linear-gradient(135deg, #312f3b 0%, #1e1c20 100%);
+    color: var(--text);
+    overflow: hidden;
+}
+
+.mainpage{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 20px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    height:100%;
+    box-sizing:border-box;
+}
+
+.maintitle{
+    font-size:2.8rem;
+    background: linear-gradient(90deg, #6a11cb, #2575fc);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom:4px;
+}
+
+.version{
+    color: var(--muted);
+    margin-bottom:15px;
+}
+
+.buttons{
+    display:flex;
+    flex-wrap:wrap;
+    gap:12px;
+    margin-bottom:10px;
+}
+
+.buttons a{
+    padding:10px 18px;
+    font-weight:600;
+    border-radius:8px;
+    border:2px solid transparent;
+    cursor:pointer;
+    background: var(--button-grad);
+    background-size:200% 200%;
+    color:#fff;
+    text-decoration:none;
+    transition: all 0.3s ease;
+}
+
+.buttons a:hover{
+    background-position: right center;
+    transform: scale(1.05);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+}
+
+.controls{
+    display:flex;
+    gap:10px;
+    margin-bottom:10px;
+}
+
+.controls button{
+    padding:8px 14px;
+    font-weight:600;
+    border-radius:6px;
+    border:none;
+    background: var(--button-grad);
+    background-size:200% 200%;
+    color:#fff;
+    cursor:pointer;
+    transition: all 0.3s ease;
+}
+
+.controls button:hover{
+    background-position:right center;
+    transform: scale(1.05);
+    box-shadow:0 4px 15px rgba(0,0,0,0.3);
+}
+
+.panel{
+    display:flex;
+    flex-direction:column;
+    gap:8px;
+    width:90%;
+    max-width:760px;
+    margin-bottom:15px;
+}
+
+.panel label{
+    color: var(--muted);
+}
+
+.panel input{
+    padding:10px;
+    border-radius:6px;
+    border:1px solid #333;
+    background:#121118;
+    color:#fff;
+    transition:0.3s;
+}
+
+.panel input:focus{
+    border:1px solid #2575fc;
+    outline:none;
+    box-shadow:0 0 8px rgba(37,117,252,0.5);
+}
+
+.Btn {
+  width: 130px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(15, 15, 15);
+  border: none;
+  color: white;
+  font-weight: 600;
+  gap: 8px;
+  cursor: pointer;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+}
+
+.svgIcon {
+  width: 16px;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.Btn::before {
+  width: 130px;
+  height: 130px;
+  position: absolute;
+  content: "";
+  background-color: white;
+  border-radius: 50%;
+  left: -100%;
+  top: 0;
+  transition-duration: .3s;
+  mix-blend-mode: difference;
+}
+
+.Btn:hover::before {
+  transition-duration: .3s;
+  transform: translate(100%,-50%);
+  border-radius: 0;
+}
+
+.Btn:active {
+  transform: translate(5px,5px);
+  transition-duration: .3s;
+}
+
+.hidden{display:none;}
+
+.terminal{
+    width:90%;
+    max-width:1050px;
+    flex:1;
+    background:#121118;
+    border-radius:8px;
+    border:1px solid #2575fc;
+    padding:15px;
+    overflow-y:auto;
+    font-family:'Courier New', monospace;
+    white-space:pre-wrap;
+    transition:0.3s;
+    user-select: text;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+}
+</style>
 </head>
 <body>
-  <div class="mainpage">
-    <h2 class="maintitle">Preefx Menu</h2>
-    <p class="version">Version: <span>v1.0</span></p>
+<div class="mainpage">
+    <h2 class="maintitle">NetworkTools</h2>
+    <p class="version">Version: <span>v2.0</span></p>
 
     <div class="buttons">
-      <a href="#" onclick="runIpconfig()">IPConfig</a>
-      <a href="#" onclick="pingOption()">Ping</a>
-      <a href="#" onclick="showArp()">ARP Table</a>
-      <a href="#" onclick="showPortUI()">Port Scanner</a>
+        <button class="Btn" onclick="runIpconfig()">IP Config</button>
+        <button class="Btn" onclick="pingOption()">Ping</button>
+        <button class="Btn" onclick="showArp()">ARP Table</button>
+        <button class="Btn" onclick="showPortUI()">Port Scanner</button>
     </div>
 
-    <div id="controls" class="controls">
-      <button id="clearBtn" onclick="clearOutput()">Clear</button>
-      <button onclick="copyOutput()">Copy</button>
+    <div class="controls">
+        <button onclick="clearOutput()">Clear</button>
+        <button onclick="copyOutput()">Copy</button>
     </div>
 
     <div id="portScanner" class="panel hidden">
-      <label>Target (IP or domain):</label>
-      <input id="portTarget" type="text" placeholder="e.g. 192.168.1.1 or example.com" />
+        <label>Target (IP or domain):</label>
+        <input id="portTarget" type="text" placeholder="e.g. 192.168.1.1 or example.com" />
 
-      <label>Ports (comma, ranges, or 'common'):</label>
-      <input id="portList" type="text" placeholder="e.g. 22,80,443 or 1-1024 or common" />
+        <label>Ports (comma, ranges, or 'common'):</label>
+        <input id="portList" type="text" placeholder="e.g. 22,80,443 or 1-1024 or common" />
 
-      <div style="margin-top:6px;">
-        <button onclick="runPortScan()">Start Scan</button>
-        <button onclick="hidePortUI()">Close</button>
-      </div>
+        <div style="margin-top:6px;">
+            <button onclick="runPortScan()">Start Scan</button>
+            <button onclick="hidePortUI()">Close</button>
+        </div>
     </div>
 
     <pre id="status" class="terminal"></pre>
-  </div>
+</div>
 
-  <style>
-    :root{
-      --bg: #25242a;
-      --green: #00ff00;
-      --muted: #7f7f7f;
-    }
-    html,body{
-      height:100%;
-      margin:0;
-      background:var(--bg);
-      font-family: 'Courier New', monospace;
-      color:var(--green);
-      overflow: hidden; /* prevent window scrolling */
-    }
-    .mainpage {
-      max-width:1100px;
-      margin:0 auto;
-      padding:18px;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      height:100%;
-      box-sizing:border-box;
-    }
-    .maintitle { color:var(--green); font-size:2.6rem; margin:6px 0; }
-    .version { color:var(--muted); margin-bottom:8px; }
+<script>
+function setStatus(text){
+    const el = document.getElementById("status");
+    el.innerText = text;
+    el.scrollTop = el.scrollHeight;
+}
+function clearOutput(){document.getElementById("status").innerText="";}
+function copyOutput() {
+    const text = document.getElementById("status").innerText;
+    if (!text) return alert("Nothing to copy");
+    navigator.clipboard.writeText(text)
+        .then(() => alert("✅ Copied to clipboard"))
+        .catch(() => alert("❌ Could not copy"));
+}
+async function runIpconfig(){
+    setStatus("⏳ Running ipconfig...");
+    const res = await pywebview.api.run_ipconfig();
+    setStatus(res);
+}
 
-    .buttons { display:flex; gap:10px; margin-top:8px; flex-wrap:wrap; }
-    .buttons a {
-      color:var(--green); text-decoration:none;
-      border:1px solid var(--green); padding:8px 12px; cursor:pointer;
-    }
-    .buttons a:hover { background:var(--green); color:var(--bg); }
+async function pingOption(){
+    let choice = prompt("Type '1' to ping EU Epic servers or enter a domain/IP, Type '2' to ping Retrac servers:");
+    let target;
+    if(choice){
+        if(choice==="1") target="ping-eu.ds.on.epicgames.com";
+        else if(choice==="2") target="retrac.site";
+        else target = choice;
+    } else return;
+    setStatus("⏳ Pinging "+target+" ...");
+    const res = await pywebview.api.run_ping(target);
+    setStatus(res);
+}
 
-    .controls { margin-top:10px; display:flex; gap:8px; align-items:center; }
-    .controls button {
-      background:var(--bg); color:var(--green); border:1px solid var(--green);
-      padding:6px 10px; cursor:pointer;
-    }
-    .controls button:hover { background:var(--green); color:var(--bg); }
+async function showArp(){
+    setStatus("⏳ Getting ARP table...");
+    const res = await pywebview.api.run_arp();
+    setStatus(res);
+}
 
-    .panel { margin-top:12px; display:flex; flex-direction:column; gap:6px; width:90%; max-width:760px; align-items:flex-start; }
-    .panel label { color:var(--muted); font-size:0.9rem; }
-    .panel input { width:100%; padding:8px; background:#1b1b1b; border:1px solid #333; color:var(--green); }
+function showPortUI(){document.getElementById("portScanner").classList.remove("hidden");}
+function hidePortUI(){document.getElementById("portScanner").classList.add("hidden");}
 
-    .hidden { display:none; }
-
-    /* make terminal area fit inside window (no outer scroll) */
-    .terminal {
-      width:90%;
-      max-width:1050px;
-      margin-top:12px;
-      /* compute height so the whole page fits in the viewport */
-      height: calc(100vh - 260px);
-      min-height: 200px;
-      background:var(--bg);
-      color:var(--green);
-      padding:14px;
-      border:1px solid var(--green);
-      overflow-y:auto; /* internal scrolling only */
-      white-space:pre-wrap;
-      box-sizing:border-box;
-      user-select:text;
-    }
-
-    @media (max-width:700px){
-      .maintitle { font-size:1.8rem; }
-      .terminal { height: calc(100vh - 260px); width:96%; }
-    }
-  </style>
-
-  <script>
-    function setStatus(text){
-      const el = document.getElementById("status");
-      el.innerText = text;
-      el.scrollTop = el.scrollHeight;
-    }
-
-    function clearOutput(){
-      document.getElementById("status").innerText = "";
-    }
-
-    function copyOutput(){
-      const text = document.getElementById("status").innerText;
-      if (!text) return alert("Nothing to copy");
-      navigator.clipboard.writeText(text).then(()=> alert("Copied to clipboard"));
-    }
-
-    async function runIpconfig(){
-      setStatus("⏳ Running ipconfig...");
-      const res = await pywebview.api.run_ipconfig();
-      setStatus(res);
-    }
-
-    async function pingOption(){
-      let choice = prompt("Type '1' to ping EU Epic servers or enter a domain/IP, Type '2' to ping Retrac servers:");
-      let target;
-      if (choice > 0) {
-        if (choice === "1") {
-          target = "ping-eu.ds.on.epicgames.com";
-        }
-        if (choice === "2") {
-          target = "retrac.site";
-        }
-      } else if (choice) {
-        target = choice;
-      } else {
-        return
-      }
-      setStatus("⏳ Pinging " + target + " ...");
-      const res = await pywebview.api.run_ping(target);
-      setStatus(res);
-    }
-
-    async function showArp(){
-      setStatus("⏳ Getting ARP table...");
-      const res = await pywebview.api.run_arp();
-      setStatus(res);
-    }
-
-    function showPortUI(){
-      document.getElementById("portScanner").classList.remove("hidden");
-    }
-    function hidePortUI(){
-      document.getElementById("portScanner").classList.add("hidden");
-    }
-
-    async function runPortScan(){
-      const target = document.getElementById("portTarget").value.trim();
-      const ports = document.getElementById("portList").value.trim() || "common";
-      if (!target){
-        alert("Enter a target IP or hostname.");
-        return;
-      }
-      setStatus(`⏳ Scanning ${target} ...\n(Ports: ${ports})\nThis may take a few seconds...`);
-      try {
+async function runPortScan(){
+    const target = document.getElementById("portTarget").value.trim();
+    const ports = document.getElementById("portList").value.trim() || "common";
+    if(!target){alert("Enter a target IP or hostname."); return;}
+    setStatus(`⏳ Scanning ${target} ...\n(Ports: ${ports})\nThis may take a few seconds...`);
+    try{
         const res = await pywebview.api.run_port_scan(target, ports);
         setStatus(res);
-      } catch (e){
-        setStatus("❌ Error: " + e);
-      }
-    }
-  </script>
+    }catch(e){setStatus("❌ Error: "+e);}
+}
+</script>
 </body>
 </html>
